# ArtifactsMono

./: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
apps/docker-metrics-exporter/src/: index.js
apps/legacy/ArtifactsMMO/: config.json  docker-compose.yml  package-lock.json  package.json
apps/legacy/ArtifactsMMO/src/: constants.js  index.js  tasks.js
apps/orchestrator/: package-lock.json  package.json  tsconfig.json
apps/orchestrator/src/: index.ts
apps/python/: pyproject.toml
apps/python/src/artifactsmmo_python/: __init__.py  __main__.py
apps/worker/: package-lock.json  package.json  worker-test.err  worker-test.out
apps/worker/src/: constants.ts  index.ts  taskManager.ts
monitoring/grafana/dashboards/: container-resources.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
shared/: loadEnv.ts  taskTypes.ts
